[package]
name = "jisp_sha2"
version = "0.1.0"
edition = "2021"
description = "an implementation of the SHA-2 algorithm and its variations for a personal project"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-bigint = "0.5.5"

